# inference_results_v0.5

./: README.md
closed/Alibaba/: test.md  (+2 more)
closed/DellEMC/code/ssd-small/openvino-linux/: CMakeLists.txt  README.md  backend_ov.h  dataset_ov.h  infer_request_wrap.h  main_ov.cc  sut_ov.h
closed/DellEMC/code/ssd-small/openvino-linux/scripts/: 0_Warning.txt  ssdmobilenet_user.conf
closed/FuriosaAI/code/ssd-small/furiosa-loadgen/: CMakeLists.txt  README.md  coco-preprocess.py  resize-coco.py  ssd_mobilenet_v1_offline.cc  ssd_mobilenet_v1_singlestream.cc
closed/Habana/code/ssd-large/Habana_benchmark/runner/: CMakeLists.txt
closed/Habana/code/ssd-large/Habana_benchmark/runner/source/: HABANA_imageCahceMananager.cpp
closed/Intel/code/resnet/onnx/nnpi-mlperf-loadrunner/: CMakeLists.txt  audit.sh  do_resnet_server.sh  loadrun.cpp  loadrun.sh  multi_stream.sh  nnpi_infer_mlperf_job.h  offline_scenario.sh  run.sh  server_scenario.sh  short_accuracy_test.sh  single_stream.sh  submit.sh  test01.sh  test03.sh  test04.sh  test05.sh
closed/Intel/code/resnet/onnx/nnpi-mlperf-loadrunner/accuracy_test/: accuracy-imagenet.py  d_r_s.sh  do_accuracy.sh
closed/Intel/code/resnet/onnx/nnpi-mlperf-loadrunner/include/: cv_image_utils.h  multi_instance.h  net_config.h
closed/Intel/code/resnet/onnx/nnpi-mlperf-loadrunner/src/: cv_image_utils.cpp
closed/Intel/code/ssd-small/openvino-linux/: CMakeLists.txt  backend_ov.h  dataset_ov.h  infer_request_wrap.h  item_ov.h  main_ov.cc  sut_ov.h
closed/Intel/code/ssd-small/openvino-linux/scripts/: offline_ssdm.sh  offline_ssdm_accuracy.sh  server_ssdm.sh  server_ssdm_accuracy.sh  singlestream_ssdm.sh  singlestream_ssdm_accuracy.sh
closed/Intel/code/ssd-small/openvino-windows/ov_mlperf/: CMakeLists.txt  backend_ov.h  infer_request_wrap.h  item_ov.h  main_ov.cc  sut_ov.h  utils.h
closed/NVIDIA/code/harness/: CMakeLists.txt
closed/NVIDIA/code/harness/common/: callback.hpp  harness_flags.hpp  logger.cpp  utils.hpp
closed/NVIDIA/code/harness/harness_default/: main_default.cc
closed/NVIDIA/code/harness/harness_gnmt_default/: gnmt_server.cc  gnmt_server.h
closed/NVIDIA/code/harness/harness_gnmt_server/: GNMTBench.cc  GNMTBench.h  GNMTBindingBase.cc  GNMTBindingBase.h  GNMTBindings.cc  GNMTBindings.h  GNMTInferRunner.h  GNMTModel.cc  GNMTModel.h  GNMTModelBase.h  GNMTQSL.cc  GNMTQSL.h  GNMTSUT.cc  GNMTSUT.h  common.cc  common.h  main_server.cc
closed/NVIDIA/code/harness/lwis/: CMakeLists.txt
closed/NVIDIA/code/harness/lwis/include/: logger.h  lwis.hpp  lwis_buffers.h  qsl.hpp
closed/NVIDIA/code/harness/lwis/src/: lwis.cpp
closed/NVIDIA/code/plugin/NMSOptPlugin/: CMakeLists.txt
closed/NVIDIA/code/plugin/NMSOptPlugin/src/: allClassNMSOpt.cu  decodeBBoxesOpt.cu  detectionForwardOpt.cu  fast_divmod.h  gatherTopDetectionsOpt.cu  nmsOptHelper.cpp  nmsPluginOpt.cpp  nmsPluginOpt.h  permuteConfData.cu  softmaxScore.cpp  ssdOpt.h  ssdOptMacros.h  topKScoresPerClass.cu  topKScoresPerClassFusedPermute.cu  topKScoresPerImage.cu
open/Habana/code/resnet/Habana_benchmark/: CMakeLists.txt
open/Habana/code/resnet/Habana_benchmark/benchmark_app/: CMakeLists.txt
open/Habana/code/resnet/Habana_benchmark/benchmark_app/headers/: HABANA_nms_class.h  HABANA_runner_c_interface.h
open/Habana/code/resnet/Habana_benchmark/benchmark_app/ini/: Goya.json  copy_code.sh  resnet_MultiStream_submissionrun.ini  resnet_Offline_submissionrun.ini  resnet_Server_performance.ini  resnet_SingleStream_submissionrun.ini  ssd-large_MultiStream_accuracy.ini  ssd-large_MultiStream_performance.ini  ssd-large_Server_performance.ini  ssd-large_SingleStream_submissionrun.ini
open/Habana/code/resnet/Habana_benchmark/preprocess/: download_ssd_r34_model.sh  mx_r34_v1_ssd_1200.py  util.py
open/Habana/code/resnet/Habana_benchmark/preprocess/ssd_mx_symbol/: resnetv1.py
open/Habana/code/resnet/Habana_benchmark/runner/source/: HABANA_runner.cpp
open/Habana/code/resnet/Habana_benchmark/utils/: SSDR34_1200_deafalt_boxes.py
open/Inspur/code/resnet/schedule/: CMakeLists.txt  CMakeSettings.json  Readme.md  mlperf_inference_schedule.prototxt  setup.py
open/Inspur/code/resnet/schedule/mlperf_schedule.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
open/Inspur/code/resnet/schedule/src/: common.tar  main.cpp  postprocess.tar  schedule-opt.tar  test.cpp
open/Inspur/code/resnet/schedule/src/bindings/: python_api.cpp
open/Inspur/code/resnet/schedule/src/cnpy/: cnpy.cpp
open/Inspur/code/resnet/schedule/src/common/: common.h  image_op.h  logging.cpp  logging.h  macro.h  string_op.cpp  string_op.h  types.h  utils.h
open/Inspur/code/resnet/schedule/src/config/: config.cpp  config.h  input_file.cpp  input_file.h  node.h  parser.cpp  parser.h
open/Inspur/code/resnet/schedule/src/inference/: CMakeLists.txt  NvInferPlugin.h  config.py  env.sh  imginference.cc  inference.cc  inference.cmake  inference.h  logger.cpp  samplePlugin.cpp  ssdinference.cc
open/Inspur/code/resnet/schedule/src/inference/calib/: mnist_calibration_2.cache
open/Inspur/code/resnet/schedule/src/inference/cmake/: FindTRT.cmake
open/Inspur/code/resnet/schedule/src/postprocess/: main_postproc.cpp  postproc_argmax.cpp  postproc_argmax.h  postproc_coco.cpp  postproc_coco.h  postproc_common.cpp  postproc_common.h  postprocess_api.cpp  postprocess_base.h
open/Inspur/code/resnet/schedule/src/python/: audit.sh  coco.py  dataset.py  imagenet.py  main.py  mlperf.conf  mlperf_log_detail.txt  mlperf_log_summary.txt  results.json  version.py
open/Inspur/code/resnet/schedule/src/schedule/: batch_merge_node.cpp  batch_merge_node.h  batch_split_node.cpp  batch_split_node.h  blocking_queue.cpp  blocking_queue.h  data_set.cpp  data_set.h  gpu_schedule_node.cpp  gpu_schedule_node.h  graph.cpp  graph.h  image_node.cpp  image_node.h  inference_node.cpp  inference_node.h  init_node.cpp  init_node.h  inner_thread.cpp  inner_thread.h  memory_copy_node.cpp  memory_copy_node.h  post_process_node.cpp  post_process_node.h  schedule.cpp  schedule.h
open/NVIDIA/code/gnmt/tensorrt/harness/: CMakeLists.txt  main_gnmt_offline.cc
(+11492 files in other folders)
